monitoring/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rps-app
  namespace: rps-app
spec:
  selector:
    matchLabels:
      app: rps-app
  replicas: 2
  template:
    metadata:
      labels:
        app: rps-app
    spec:
      containers:
        - name: rps-app
          image: admiralissimus/diplom2:0.26.0
          resources:
            requests:
              cpu: 200m
              memory: 100Mi
            limits:
              cpu: 500m
              memory: 200Mi
          ports:
            - containerPort: 80
