monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  # annotations:
  #   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  #   nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: rps.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rps-app-clusterip
            port:
              number: 80
